introduce service reflection calling from invokes

--- a/watch-my-cam/build.gradle
+++ b/watch-my-cam/build.gradle
@@ -34,4 +34,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':scxml-android-lib')
+    compile ('commons-beanutils:commons-beanutils:1.9.2')
+
+
 }
