--- a/scxml-android-lib/build.gradle
+++ b/scxml-android-lib/build.gradle
@@ -4,6 +4,10 @@ android {
     compileSdkVersion 21
     buildToolsVersion "21.1.2"
 
+    lintOptions {
+        abortOnError false
+    }
+
     defaultConfig {
         minSdkVersion 3
         targetSdkVersion 21
@@ -19,13 +23,19 @@ android {
 }
 
 dependencies {
-    compile('com.nosolojava.fsm:scxml-java-implementation:1.0.1'){
+    compile('com.nosolojava.fsm:scxml-java-implementation:1.0.2-SNAPSHOT'){
         exclude group: "xpp3"
         exclude group: "xmlpull"
         exclude group: "commons-logging"
+        changing= true
     }
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     compile 'com.google.android:support-v4:r7'
+}
+
+configurations.all {
+    // check for updates every build
+    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 }
